2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Geoffrey Garen.

        Bug 18716: SQUIRRELFISH: typeof should return undefined for an undefined variable reference
        <https://bugs.webkit.org/show_bug.cgi?id=18716>

        This fixes 2 more regression tests.

        * kjs/nodes.cpp:
        (KJS::TypeOfResolveNode::emitCode):



git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@33278 268f45cc-cd09-0410-ab3c-d52691b4dbfc